* detect maximum possible segment size on file system (e.g. FAT)

smraw.net
* implement other functions ?
* in examples print exception/backtrace on error

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

Beta release
* remove deprecated functions in libsmraw_legacy.[ch]

20101208
* bug fix in write segment filename extension

20101207
* updated configure.ac, common, libcstring, liberror, libnotify, libuna,
  libbfio, libfvalue
* code clean up
* fix for mingw compilation in configure.ac

20101113
* textual corrections

20101111
* updated libfvalue, libbfio

20101103
* worked on smraw.net
* added const to write
* updated configure.ac
* updated include/error.h, include/types.h
* updated liberror, libbfio, libmfdata

20101102
* added smraw.net files

20101025
* updated libfvalue

20101015
* added write test
* write no longer requires media size to be set
* media size now limits the write
* updated codegear files

20101014
* updated libmfdata, common, liberror, libbfio, libfvalue

20100928
* updated liberror, libnotify, libbfio, libfvalue
* code clean
* added access flags API functions
* worked on TODOs

20100805
* textual changes
* updated libcstring, libbfio, libfvalue
* updated msvscpp and codegear files

20100727
* updated libmfdata

20100724
* updated libmfdata

20100723
* updated libbfio, libmfdata

20100722
* reverted libsmraw back to 20100719-1 version to test without libfvalue
  changes
* updated include/error.h and liberror
* updated libuna, libbfio, libfvalue
* worked on libmfdata integration

20100721
* worked on libfvalue

20100720
* moved information and integrity hash value functions to UTF-8 versions
* worked on libfvalue
  - moved values tables to libvalue
* updated libbfio

20100719
* updated include/error.h and liberror
* updated common, libuna, libbfio

20100716
* updated libuna, libbfio

20100714
* updated configure.ac